force-app/main/default/objects/Notifications__c/Notifications__c.object-meta.xml
<CustomObject>
    <label>Notifications</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>