force-app/main/default/objects/Notifications__c/fields/Event_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Time__c</fullName>
    <label>Event End Date Time</label>
    <type>DateTime</type>
</CustomField>