force-app/main/default/objects/Notifications__c/fields/Event_Venue__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue__c</fullName>
    <label>Event Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>