force-app/main/default/objects/Notifications__c/fields/Publish_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date_Time__c</fullName>
    <label>Publish Date/Time</label>
    <type>DateTime</type>
</CustomField>