force-app/main/default/objects/Notifications__c/fields/RSVP_Required__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSVP Required</label>
    <type>Checkbox</type>
</CustomField>