force-app/main/default/objects/Notifications__c/recordTypes/Alerts.recordType-meta.xml
<RecordType>
    <fullName>Alerts</fullName>
    <active>true</active>
    <label>Alerts</label>
</RecordType>