force-app/main/default/objects/Notifications__c/recordTypes/News_Letters.recordType-meta.xml
<RecordType>
    <fullName>News_Letters</fullName>
    <active>true</active>
    <label>News Letters</label>
</RecordType>