force-app/main/default/objects/Notifications__c/recordTypes/Notices.recordType-meta.xml
<RecordType>
    <fullName>Notices</fullName>
    <active>true</active>
    <label>Notices</label>
</RecordType>