force-app/main/default/objects/Notifications__c/recordTypes/recordTypeId.recordType-meta.xml
<RecordType>
    <fullName>recordTypeId</fullName>
    <active>true</active>
    <label>recordTypeId</label>
</RecordType>