force-app/main/default/objects/Notifications__c/listViews/Bloom_Gardens.listView-meta.xml
<ListView>
    <fullName>Bloom_Gardens</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Bloom Gardens</value>
    </filters>
    <label>Bloom Gardens</label>
</ListView>