force-app/main/default/objects/Notifications__c/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Notifications__c.Events</value>
    </filters>
    <label>Events</label>
</ListView>