force-app/main/default/objects/Notifications__c/listViews/Newsletters.listView-meta.xml
<ListView>
    <fullName>Newsletters</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Notifications__c.News_Letters</value>
    </filters>
    <label>Newsletters</label>
</ListView>