force-app/main/default/objects/Notifications__c/listViews/Notices.listView-meta.xml
<ListView>
    <fullName>Notices</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Notifications__c.Notices</value>
    </filters>
    <label>Notices</label>
</ListView>